568 - jQuery Notice boxes not aligned - Preventing access to settings
- Change alignment back to left, so that divs can be exposed and closed by the user
- see issue #568 https://github.com/silverstripe/silverstripe-admin/issues/568

--- a/client/src/styles/legacy/_style.scss
+++ b/client/src/styles/legacy/_style.scss
@@ -890,7 +890,7 @@ body.cms {
   border: 0;
   border-left: 3px solid;
   color: #666;
-  left: 300px;
+  left: 0;
   background: #fff;
 
   &.success,
